fix extra space beneath tab pane content in IE 11

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ a {
 
 .flex-auto {
   flex: 1 0 auto;
+  overflow: auto;
 }
 
 .flex-none {
